Simulations in qira
