# docs/swagger.yaml
@@ -821,6 +821,23 @@ paths:
       summary: Retrieve Risk by ID
       tags:
       - 6 - Risk
+  /api/simulation:
+    get:
+      consumes:
+      - application/json
+      description: Test for simulation
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of All Risks
+          schema:
+            items:
+              $ref: '#/definitions/db.RiskCalculation'
+            type: array
+      summary: Test for simulation
+      tags:
+      - 13 - Simulation
 securityDefinitions:
   BasicAuth:
     type: basic
