# middleware/router.go
@@ -79,6 +79,7 @@ func SetupRouter() *gin.Engine {
 	//Risk
 	auth.GET("/risk", risk.PullAllRisk)
 	auth.GET("/risk/:id", risk.PullRiskId)
+	auth.GET("/simulation", risk.RiskMount)
 
 	// Revelance
 	auth.GET("/revelance", revelance.PullAllRevelance)
